# alex-url-shortener

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: init_postgres.sql  migrate_sqlite_to_postgres.py  validate_uniqueness.py
static/: style.css
templates/: index.html  stats.html  top.html
tests/: conftest.py  test_app.py
