[project]
name = "alex-url-shortener"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "blinker==1.9.0",
    "click==8.3.1",
    "flask==3.1.3",
    "gunicorn==23.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "psycopg2-binary==2.9.10",
    "werkzeug==3.1.6",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.9.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
