[project]
name = "alex-url-shortener"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30",
    "fastapi>=0.115",
    "jinja2>=3.1",
    "markupsafe>=3.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
